--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     doc.addEventListener("onVidizmoError", function(event){
         console.log("🚀 ~ file: widget-index.html ~ line 87 ~ doc.addEventListener ~ error", event)
     })
-    var doc2 = document.getElementsByTagName("vdz-mashup-mostpopular-collage")[0]
+    var doc2 = document.getElementsByTagName("body")[0]
     doc2.addEventListener("vdz-on-link-clicked", function(event){
         console.log("vdz-on-link-clicked", event)
     })
